feat: Add country aggregation data

--- a/Leaderboard Scraper.ipynb
+++ b/Leaderboard Scraper.ipynb
@@ -1391,10 +1391,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "amended_first_200k_df.to_csv(\"./amended_first_200k_players.csv\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1402,7 +1404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+    "# TODO - fix player id, best achievements list for first 30 players!\n",
     "# TODO - add a larger dataset using this scraping method (~3000 players?)"
    ]
   }
